--- a/src/_globalColor.scss
+++ b/src/_globalColor.scss
@@ -10,8 +10,8 @@ $topButtonHover: #000;
 // text colors light theme
 $titleColor: #000000;
 $textColor: #000000;
-$subTitle: #868e96;
-$cardSubtitle: #666666;
+$subTitle: #555a60;
+$cardSubtitle: #393939;
 $talkCardSubTitle: #7f8287;
 $blogCardTitleColor: #262626;
 
