--- a/src/containers/StartupProjects/StartupProjects.scss
+++ b/src/containers/StartupProjects/StartupProjects.scss
@@ -7,15 +7,15 @@
 }
 .card-title {
   color: $titleColor;
-  font-size: 22px;
+  font-size: 26px;
   line-height: 24px;
   font-weight: 700;
   margin: 15px 0 0 0;
 }
 .card-subtitle {
   color: $cardSubtitle;
-  font-size: 17px;
-  line-height: 1.5rem;
+  font-size: 20px;
+  line-height: 1.7rem;
 }
 .project-card {
   display: flex;
@@ -42,6 +42,13 @@
 
 .project-detail {
   text-align: center;
+}
+.project-detail ul {
+  text-align: left;
+  display: inline-block;
+  margin: 0 auto 1rem auto;
+  padding-left: 0;
+  list-style: none;
 }
 .project-card-light:hover {
   box-shadow: $lightBoxShadowDark 0px 20px 30px -10px;
@@ -71,15 +78,24 @@
   align-items: center;
   border-radius: 4px;
   display: inline-flex;
-  font-size: 0.75rem;
-  height: 2em;
+  font-size: 1rem;
+  height: 2.5em;
   justify-content: center;
   white-space: nowrap;
   line-height: 1.5;
-  margin: 0 0.5rem 0.5rem 0;
-  padding: 0 0.75em;
+  margin: 0 0.75rem 0.75rem 0;
+  padding: 0 1.25em;
   cursor: pointer;
   transition: 0.2s ease-in;
+}
+
+// Add style for project desc bullets
+.project-desc-bullet {
+  color: $cardSubtitle;
+  font-size: 16px;
+  line-height: 1.4rem;
+  text-align: left;
+  /* No bullet points */
 }
 
 @media (max-width: 768px) {
