--- a/src/containers/contact/Contact.scss
+++ b/src/containers/contact/Contact.scss
@@ -20,10 +20,11 @@
 .contact-detail,
 .contact-detail-email {
   margin-top: 20px;
-  font-size: 40px;
+  font-size: 20px;
   font-weight: 400;
   color: $subTitle;
   text-decoration: none;
+  padding: 0.3em 0.8em;
 }
 
 .contact-detail:hover,
